tests/fail/19_char_unclosed.lang
функция Начало(): целое {
  символ unclosed = 'a;
  вернуть 0;
}
